# langmetrics

./: .gitignore  README.md  Readme.md  pyproject.toml  requirements.txt
examples/: 0_llm_factory.ipynb  1_1_Evaluate_for_MCQ_case.ipynb  1_2_Evaluate_for_Judge_case.ipynb  1_Evaluate_for_one_case.ipynb  2_Dataset.ipynb  3_1_medqa_Dataset_evaluate.ipynb  3_Dataset_evaluate.ipynb  3_kormedmcqa_evaluate copy.ipynb  eval.py
src/langevaluate/quantiative_metrics/: bertscore.py  efficientscore.py
src/langmetrics/: __init__.py
src/langmetrics/config/: __init__.py  db_config.py  evaluation_config.py  model_config.py
src/langmetrics/core/: __init__.py  result.py
src/langmetrics/db/: __init__.py  base.py  base_manager.py  duckdb_manager.py  manager.py  schema.sql  server_manager.py
src/langmetrics/evaluator/: __init__.py  base_evaluator.py  binarychoice_evaluator.py  llm_evaluator.py  multichoice_evaluator.py  multiturn_evaluator.py  open_ended_evaluator.py
src/langmetrics/llmdataset/: __init__.py  dataset.py
src/langmetrics/llmfactory/: base_factory.py  llmfactory.py
src/langmetrics/llmresult/: result.py
src/langmetrics/llmtestcase/: __init__.py  llmtestcase.py
src/langmetrics/metrics/: __init__.py  base_metric.py  base_result.py  base_template.py  prompts.py
src/langmetrics/prompt_storage/: arena_prompt.json  arena_prompt.toml  mcq_choice_prompt.json  medical_evaluate_prompt.json  tmp.ipynb
src/langmetrics/result/: result.py
src/langmetrics/scorer/: scorer.py
tests/: conftest.py  test_config.py  test_evaluator.py  test_file_handler.py
(+11 files in other folders)
