[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langmetrics"
version = "0.0.0"
authors = [
  { name="Jin", email="nwirandx@gmail.com" },
]
description = "LLM 기반의 자동 평가 시스템"
readme = "Readme.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "langchain>=0.1.0",
    "langchain-community==0.3.14",
    "langchain-openai>=0.3.0",
    "langchain-anthropic==0.3.1",
    "pandas>=2.0.0",
    "datasets>=2.14.0",
    "asyncio>=3.4.3",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=1.4.0",
    "psycopg2-binary>=2.9.0",
]

[project.urls]
"Homepage" = "https://github.com/JINAILAB/langmetrics"
"Bug Tracker" = "https://github.com/yourusername/langmetrics/issues"